[metadata]
name = runner_client
version = 1.0.0
author = Sony Pictures - Digital Media Group
author_email = runner_help@spe.sony.com
description = API client for Sony Pictures Runner / Compass API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spedmg/runner-client-py
project_urls =
    Bug Tracker =  https://github.com/spedmg/runner-client-py/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
install_requires = ['attrs', 'requests']

[options.packages.find]
include = ['runner_client', 'runner_client.*']
